# aoc2023

./: .bazelrc  .gitignore  BUILD  Justfile  MODULE.bazel  README.md  WORKSPACE
cpp/: BUILD  libday1.cc
cpp/day1/: BUILD  day1.cc  day1_test.cc  libday1.h
cpp/day2/: BUILD  day2.cc  day2_test.cc  libday2.cc  libday2.h
cpp/day8/: BUILD  day8.cc  day8_test.cc  libday8.cc  libday8.h
go/: go.mod
go/day1/: BUILD.bazel  main.go  main_test.go
go/day2/: BUILD.bazel  main.go  main_test.go
go/day8/: BUILD.bazel  main.go  main_test.go
rust/: BUILD  Cargo.toml  log.txt
rust/src/: lib.rs
