[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.20", features = ["release_max_level_info"] }
anyhow = "1.0.75"
env_logger = "0.10.1"
itertools = "0.12.0"
maplit = "1.0.2"
once_cell = "1.18.0"
regex = "1.10.2"
textwrap = "0.16.0"
nom = "7.1.3"
roots = "0.0.8"
