load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "day1_lib",
    srcs = ["main.go"],
    importpath = "github.com/omerbenamram/aoc2023/go/day1",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "day1",
    embed = [":day1_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "day1_test",
    srcs = ["main_test.go"],
    embed = [":day1_lib"],
)
