load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "day2_lib",
    srcs = ["main.go"],
    importpath = "github.com/omerbenamram/aoc2023/go/day2",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "day2",
    embed = [":day2_lib"],
    visibility = ["//visibility:public"],
)
