load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "day8_lib",
    srcs = ["main.go"],
    importpath = "github.com/omerbenamram/aoc2023/go/day8",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "day8",
    embed = [":day8_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "day8_test",
    srcs = ["main_test.go"],
    embed = [":day8_lib"],
)
